src/passes/snapshots/lumina2__passes__cst_gen__test__expr__assign_expression.snap
---
source: src/passes/cst_gen.rs
expression: some_ident = 1 + 2
---
Assign {
    assignee: Variable(
        Variable {
            variable: Ident(
                "some_ident",
            ),
        },
    ),
    tok_eq: Eq,
    value: Binary(
        Binary {
            lhs: Literal(
                Integer(
                    IntegerLiteral(
                        IntLit(
                            1,
                        ),
                    ),
                ),
            ),
            op: Plus(
                Plus,
            ),
            rhs: Literal(
                Integer(
                    IntegerLiteral(
                        IntLit(
                            2,
                        ),
                    ),
                ),
            ),
        },
    ),
}
