src/passes/snapshots/lumina2__passes__cst_gen__test__expr__assign_simple.snap
---
source: src/passes/cst_gen.rs
expression: some_ident = some_value
---
Assign {
    assignee: Variable(
        Variable {
            variable: Ident(
                "some_ident",
            ),
        },
    ),
    tok_eq: Eq,
    value: Variable(
        Variable {
            variable: Ident(
                "some_value",
            ),
        },
    ),
}
