src/passes/snapshots/lumina2__passes__cst_gen__test__expr__binary_literal.snap
---
source: src/passes/cst_gen.rs
expression: a + 2
---
Binary {
    lhs: Variable(
        Variable {
            variable: Ident(
                "a",
            ),
        },
    ),
    op: Plus(
        Plus,
    ),
    rhs: Literal(
        Integer(
            IntegerLiteral(
                IntLit(
                    2,
                ),
            ),
        ),
    ),
}
