src/passes/snapshots/lumina2__passes__cst_gen__test__expr__call_no_args.snap
---
source: src/passes/cst_gen.rs
expression: a()
---
Call {
    callee: Variable(
        Variable {
            variable: Ident(
                "a",
            ),
        },
    ),
    tok_l_paren: LParen,
    arguments: PunctuatedList {
        items: [],
        punctuation: [],
    },
    tok_r_paren: RParen,
}
