src/passes/snapshots/lumina2__passes__cst_gen__test__expr__call_single_arg.snap
---
source: src/passes/cst_gen.rs
expression: a(1)
---
Call {
    callee: Variable(
        Variable {
            variable: Ident(
                "a",
            ),
        },
    ),
    tok_l_paren: LParen,
    arguments: PunctuatedList {
        items: [
            Literal(
                Integer(
                    IntegerLiteral(
                        IntLit(
                            1,
                        ),
                    ),
                ),
            ),
        ],
        punctuation: [],
    },
    tok_r_paren: RParen,
}
