src/passes/snapshots/lumina2__passes__cst_gen__test__expr__expr_add_mul.snap
---
source: src/passes/cst_gen.rs
expression: 123 + 321 * 999
---
Binary(
    Binary {
        lhs: Literal(
            Integer(
                IntegerLiteral(
                    IntLit(
                        123,
                    ),
                ),
            ),
        ),
        op: Plus(
            Plus,
        ),
        rhs: Binary(
            Binary {
                lhs: Literal(
                    Integer(
                        IntegerLiteral(
                            IntLit(
                                321,
                            ),
                        ),
                    ),
                ),
                op: Multiply(
                    Asterisk,
                ),
                rhs: Literal(
                    Integer(
                        IntegerLiteral(
                            IntLit(
                                999,
                            ),
                        ),
                    ),
                ),
            },
        ),
    },
)
